<resources>
    <string name="app_name">languageLearning</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_subtitle">Create your account</string>
    <string name="name">Name</string>
    <string name="mail">E-mail</string>
    <string name="password">Password</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>

    <string name="word">Word</string>
    <string name="word_transcription">[ˈkʊkɪŋ]</string>
    <string name="part_of_speech">Part of Speech:</string>
    <string name="word_part_of_speech">Noun</string>
    <string name="word_meanings">Meanings:</string>

    <string name="definition">A single distinct meaningful element of speech or writing, used with others (or sometimes alone) to form a sentence and typically shown with a space on either side when written or printed.</string>
    <string name="definition_example">Example:</string>
    <string name="definition_example_text">I don\'t like the word \‘unofficial\’</string>
    <string name="add_to_dictionary">Add to Dictionary</string>

    <string name="next">Next</string>
    <string name="start">Let\'s Start</string>
    <string name="introduction_first_title">Learn anytime
        and anywhere</string>
    <string name="introduction_second_title">Find a course
        for you</string>
    <string name="introduction_third_title">Improve your skills</string>
    <string name="introduction_first_subtitle">Quarantine is the perfect time to spend your day
        learning something new, from anywhere!</string>
    <string name="introduction_second_subtitle">Quarantine is the perfect time to spend your day
        learning something new, from anywhere!</string>
    <string name="introduction_third_subtitle">Quarantine is the perfect time to spend your day
        learning something new, from anywhere!</string>
    <string name="training_fragment_title">There are 25 words in your Dictionary.

Start the Training?</string>

    <string name="training_start">Start</string>
    <string name="training_counter">1 of 10</string>
    <string name="training_definition">The practice or skill of preparing food by combining, mixing, and heating ingredients.</string>
    <string name="first_answer">Cooking</string>
    <string name="second_answer">Smiling</string>
    <string name="third_answer">Freezing</string>
    <string name="training_finished_title">Training is finished</string>
    <string name="training_finished_correct">Correct: 9</string>
    <string name="training_finished_incorrect">Incorrect: 1</string>
    <string name="training_again">Again</string>
</resources>