<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DictionaryActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:padding="0dp"
        android:background="@drawable/button_circle"
        android:src="@drawable/back_icon"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/log_in_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/log_in_photo"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_image" />

    <TextView
        android:id="@+id/sign_up_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up_subtitle"
        android:textColor="@color/grey400"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_field"
        android:background="@drawable/entry_field_shape"
        android:layout_width="0dp"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:hint="@string/name"
        android:textColorHint="@color/placeholder"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mail_field"
        android:background="@drawable/entry_field_shape"
        android:layout_width="0dp"
        android:layout_height="53dp"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:hint="@string/mail"
        android:textColorHint="@color/placeholder"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_margin="16dp"
        android:background="@drawable/entry_field_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/sign_up"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/log_in"
        android:textColor="@color/gray"
        android:padding="0dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />


</androidx.constraintlayout.widget.ConstraintLayout>